changes in html css. use these

--- a/css/index.css
+++ b/css/index.css
@@ -358,6 +358,9 @@ width: 100%;
 .card-heading{
     text-align: center;
 }
+.center-button{
+    margin-left: 130px;
+}
 .navbar{
     background-color:#2c2c54;
 }
