--- a/css/payment.css
+++ b/css/payment.css
@@ -31,13 +31,10 @@ body {
 .nav-pills .nav-link.active{
     background-color: #2c2c54;
 }
-.back {
-    color: #2c2c54;
+a {
+    color: white;
     text-decoration: none;
     background-color: transparent;
-}
-.confirm {
-    text-decoration: none;
 }
 .btn-primary:hover {
     background-color: #40407a;
